# compaction

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  optimize.py
dfdm/: CMakeLists.txt  README.md
dfdm/run/: settings.ini
dfdm/src/: CMakeLists.txt  README.md  compaction.cpp  compaction.h  config.cpp  config.h  constants.h  densification.cpp  dynamicmodel.cpp  dynamicmodel.h  icecoresite.cpp  icecoresite.h  idealizedcoresite.cpp  idealizedcoresite.h  logging.h  main.cpp  metamorphism.cpp  metamorphism.h  meteo.cpp  meteo.h  modelstate.cpp  modelstate.h  netcdfcoresite.cpp  netcdfcoresite.h  settings.h  surfacedensity.cpp  surfacedensity.h  utils.cpp
examples/: settings.ini
inversion/: optimize.py
run/: driver_threaded.py
scripts/: plot_netcdf_output.py
src/: CMakeLists.txt  compaction.cpp  compaction.h  config.cpp  constants.h  dynamicmodel.cpp  dynamicmodel.h  heatsolver.cpp  heatsolver.h  history.cpp  history.h  logging.h  main.cpp  metamorphism.cpp  meteo.cpp  meteo.h  modelstate.cpp  modelstate.h  surfacedensity.cpp  surfacedensity.h  utils.cpp  utils.h
src/unit_test/: CMakeLists.txt  test.cpp  test.h
