cmake_minimum_required(VERSION 2.8)
project(dfdm)
add_definitions(-Wall)
SET( GCC_NETCDF_INCLUDE "-I/opt/local/include")
SET( GCC_NETCDF_LIBRARY "-L/opt/local/lib -lnetcdf_c++4")
SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_NETCDF_INCLUDE} -std=c++11")
#SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_NETCDF_INCLUDE} -O0 -g -std=c++11")
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_NETCDF_LIBRARY}" )
SET( CMAKE_CXX_FLAGS_DEBUG "-O0 -g ")
add_subdirectory(src)
add_executable(dfdm.exe ${SOURCE})
